code refactoring: jwt 토큰 로직 refactoring